--- a/VulcanForWindows/MainPanelPage.xaml
+++ b/VulcanForWindows/MainPanelPage.xaml
@@ -10,6 +10,7 @@
     xmlns:attendance="using:Vulcanova.Features.Attendance"
     xmlns:converters="using:Converters"
     xmlns:controls="using:VulcanForWindows.UserControls"
+    xmlns:messages="using:Vulcanova.Features.Messages"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -170,6 +171,45 @@
                 </Grid>
                 <ProgressRing Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
                           IsActive="{x:Bind displayDayLoading, Mode=OneWay}"/>
+            </Grid>
+
+            <Grid Style="{StaticResource Panel}" x:Name="MessagesPanel"
+              VariableSizedWrapGrid.ColumnSpan="4" VariableSizedWrapGrid.RowSpan="17">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Style="{StaticResource TitleStack}">
+                    <Image Source="/Assets/GradesIcon.png" Style="{StaticResource HeaderImage}"/>
+                    <TextBlock Style="{StaticResource HeaderText}">Wiadomości</TextBlock>
+                </StackPanel>
+                <TextBlock Grid.Row="1">
+                    <Run>Masz</Run>
+                    <Run Text="{x:Bind NewMessagesCount}"/>
+                    <Run>nowe wiadomości</Run>
+                </TextBlock>
+                <Grid
+                Grid.Row="2">
+                    <ListView ItemsSource="{x:Bind messages, Mode=OneWay}" Margin="0,5,0,0">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="Margin" Value="0"/>
+                                <Setter Property="Padding" Value="0"/>
+                                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="local:MessageViewModel">
+                                <controls:SingleMessageSmall Message="{x:Bind}"/>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
+                <!--<ProgressRing Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
+                          IsActive="{x:Bind messagesLoaded, Converter={StaticResource VisibilityConverter}, Mode=OneWay}"/>-->
+
             </Grid>
         </VariableSizedWrapGrid>
     </Grid>
