--- a/VulcanForWindows/MessagesPage.xaml
+++ b/VulcanForWindows/MessagesPage.xaml
@@ -27,8 +27,8 @@
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="15"/>
                 </Grid.ColumnDefinitions>
-                <CheckBox Width="30" Content="" IsChecked="{x:Bind MainCheckBoxChecked, Mode=OneWay}" 
-                          Checked="MainChecked" Unchecked="MainUnchecked"/>
+                <CheckBox x:Name="checkbox" Width="30" Content="" IsChecked="{x:Bind MainCheckBoxChecked, Mode=OneWay}"
+                          Click="MainChanged"/>
                 <Button Grid.Column="1" Content="m" 
                         Padding="0" VerticalAlignment="Center" Height="25" HorizontalAlignment="Left">
                     <Button.Flyout>
@@ -59,7 +59,7 @@
         <ListView ItemsSource="{x:Bind Received, Mode=OneWay}" SelectionMode="None" Grid.Row="1" Margin="0,10,0,0">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="local:MessageViewModel">
-                    <controls:SingleMessageBig Message="{Binding}"/>
+                    <controls:SingleMessageBig Message="{Binding}" Margin="0,2,0,2" HorizontalAlignment="Stretch"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
