--- a/VulcanForWindows/MessagesPage.xaml
+++ b/VulcanForWindows/MessagesPage.xaml
@@ -21,42 +21,62 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" Spacing="5" Margin="31,0,31,0">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="20"/>
-                    <ColumnDefinition Width="15"/>
-                </Grid.ColumnDefinitions>
-                <CheckBox x:Name="checkbox" Width="30" Content="" IsChecked="{x:Bind MainCheckBoxChecked, Mode=OneWay}"
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="500"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" Spacing="5" Margin="31,0,31,0"
+                        HorizontalAlignment="Stretch">
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="15"/>
+                    </Grid.ColumnDefinitions>
+                    <CheckBox x:Name="checkbox" Width="30" Content="" IsChecked="{x:Bind MainCheckBoxChecked, Mode=OneWay}"
                           Click="MainChanged"/>
-                <Button Grid.Column="1" Content="m" 
+                    <Button Grid.Column="1" Content="m" 
                         Padding="0" VerticalAlignment="Center" Height="25" HorizontalAlignment="Left">
+                        <Button.Flyout>
+                            <MenuFlyout>
+                                <MenuFlyoutItem Text="Wszystkie" Click="SelectAll"/>
+                                <MenuFlyoutItem Text="Żadne" Click="UnselectAll"/>
+                                <MenuFlyoutItem Text="Przeczytane" Click="SelectRead"/>
+                                <MenuFlyoutItem Text="Nieprzeczytane" Click="SelectUnread"/>
+                            </MenuFlyout>
+                        </Button.Flyout>
+                    </Button>
+                </Grid>
+
+                <Button Width="35" Height="35" Padding="0">
+                    <SymbolIcon Symbol="Refresh" />
+                </Button>
+                <Button Width="35" Height="35" Padding="0">
+                    <SymbolIcon Symbol="More" />
+
                     <Button.Flyout>
                         <MenuFlyout>
-                            <MenuFlyoutItem Text="Wszystkie" Click="SelectAll"/>
-                            <MenuFlyoutItem Text="Żadne" Click="UnselectAll"/>
-                            <MenuFlyoutItem Text="Przeczytane" Click="SelectRead"/>
-                            <MenuFlyoutItem Text="Nieprzeczytane" Click="SelectUnread"/>
+                            <MenuFlyoutItem Text="Oznacz wszystkie jako przeczytane"/>
                         </MenuFlyout>
                     </Button.Flyout>
                 </Button>
+
+
+            </StackPanel>
+
+            <Grid HorizontalAlignment="Right"  Grid.Row="1">
+            <Pivot SelectionChanged="Pivot_SelectionChanged" 
+                   x:Name="Pivot" Width="350" Height="100" 
+                   VerticalAlignment="Center" HorizontalAlignment="Right">
+                <PivotItem Header="Odebrane"/>
+                <PivotItem Header="Wysłane"/>
+                <PivotItem Header="Kosz"/>
+            </Pivot>
             </Grid>
+        </Grid>
 
-            <Button Width="35" Height="35" Padding="0">
-                <SymbolIcon Symbol="Refresh" />
-            </Button>
-            <Button Width="35" Height="35" Padding="0">
-                <SymbolIcon Symbol="More" />
-
-                <Button.Flyout>
-                    <MenuFlyout>
-                        <MenuFlyoutItem Text="Oznacz wszystkie jako przeczytane"/>
-                    </MenuFlyout>
-                </Button.Flyout>
-            </Button>
-        </StackPanel>
-
-        <ListView ItemsSource="{x:Bind Received, Mode=OneWay}" SelectionMode="None" Grid.Row="1" Margin="0,10,0,0">
+        <ListView ItemsSource="{x:Bind CurrentCollection, Mode=OneWay}" Grid.Row="1" SelectionMode="None" Margin="0,10,0,0">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="local:MessageViewModel">
                     <controls:SingleMessageBig Message="{Binding}" Margin="0,2,0,2" HorizontalAlignment="Stretch"/>
